--- a/index.html
+++ b/index.html
@@ -884,8 +884,7 @@
                 <p>
                 <b>ORIGAMI SIMULATOR</b><br/><br/>
 
-                    This app allows you to upload any origami crease pattern and simulate how it will fold.  It uses a physics-based
-                    approach to iteratively solve for small displacements in the geometry of an initially flat sheet due to forces
+                    This app allows you to upload any origami crease pattern and simulate how it will fold.  It iteratively solves for small displacements in the geometry of an initially flat sheet due to forces
                     exerted by creases.  This solver extends work from the following sources: <br/><br/>
                     &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www2.eng.cam.ac.uk/~sdg/preprint/5OSME.pdf">Origami Folding; A Structural Engineering Approach</a> by Mark Schenk and Simon D. Guest<br/>
                     &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.tsg.ne.jp/TT/cg/TachiFreeformOrigami2010.pdf">Freeform Variations of Origami</a> by Tomohiro Tachi<br/>
@@ -1324,7 +1323,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-body">
-                This app uses GPU functions which are not supported by this device, please try again on desktop.<br/><br/>
+                This app uses GPU functions which are not supported by this device/browser, please try again on desktop with Chrome/Firefox.<br/><br/>
             </div>
         </div>
     </div>
