--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
 
                     This app allows you to upload any origami crease pattern and simulate how it will fold.  It iteratively solves for small displacements in the geometry of an initially flat sheet due to forces
                     exerted by creases.  This solver extends work from the following sources: <br/><br/>
-                    &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www2.eng.cam.ac.uk/~sdg/preprint/5OSME.pdf">Origami Folding; A Structural Engineering Approach</a> by Mark Schenk and Simon D. Guest<br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www2.eng.cam.ac.uk/~sdg/preprint/5OSME.pdf">Origami Folding: A Structural Engineering Approach</a> by Mark Schenk and Simon D. Guest<br/>
                     &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.tsg.ne.jp/TT/cg/TachiFreeformOrigami2010.pdf">Freeform Variations of Origami</a> by Tomohiro Tachi<br/>
                     <br/>
                     All simulation methods were written from scratch and are executed in parallel in several GPU fragment shaders for fast performance.
