--- a/index.html
+++ b/index.html
@@ -500,6 +500,7 @@
     <script type="text/javascript" src="dependencies/path-data-polyfill.js"></script>
     <script type="text/javascript" src="dependencies/earcut.js"></script>
     <script type="text/javascript" src="dependencies/fold.js"></script>
+    <script type="text/javascript" src="dependencies/CCapture.all.min.js"></script>
     <!--<script type="text/javascript" src="dependencies/numeric-1.2.6.js"></script>-->
 
     <!--<script type="text/javascript" src="dependencies/EffectComposer.js"></script>-->
@@ -553,6 +554,9 @@
                     <li><a class="loadFile" href="#">Import... (SVG / FOLD)</a></li>
                     <!--<li><a id="importSettings" href="#">SVG Import Settings...</a></li>-->
                     <li><a id="tips" href="#">File Import Tips</a></li>
+                    <li class="divider"></li>
+                    <li><a id="createGif" href="#">Record animated GIF...</a></li>
+                    <li><a id="createVideo" href="#">Record video...</a></li>
                     <li class="divider"></li>
                     <li><a id="exportFOLD" href="#">Save Simulation as FOLD...</a></li>
                     <li><a id="exportSTL" href="#">Save Simulation as STL...</a></li>
@@ -909,6 +913,7 @@
                     <ul>
                         <li>All rendering and 3D interaction done with <a target="_blank" href="https://threejs.org/">three.js</a></li>
                         <li><a href="https://www.npmjs.com/package/path-data-polyfill" target="_blank">path-data-polyfill</a> helps with SVG parsing</li>
+                        <li><a href="https://github.com/edemaine/fold" target="_blank">FOLD</a> is used as the internal data structure, and methods from the FOLD api are used for SVG parsing</li>
                         <li>Arbitrary polygonal faces of imported geometry are triangulated using the <a target="_blank" href="https://github.com/mapbox/earcut">Earcut Library</a></li>
                         <li><a target="_blank" href="https://jquery.com/">jQuery</a>, <a target="_blank" href="http://getbootstrap.com/">Bootstrap</a>, and the
                             <a target="_blank" href="http://designmodo.github.io/Flat-UI/">Flat UI theme</a> used to build the GUI</li>
@@ -1046,7 +1051,7 @@
                 Filename: &nbsp;&nbsp;<input id="stlFilename" value="" placeholder="" class="bigInput text form-control" type="text"> .stl<br/><br/>
                 Scale: &nbsp;&nbsp;<input value="" placeholder="" class="float exportScale form-control" type="text"><br/><br/>
                 Dimensions: &nbsp;&nbsp;<b><span class="exportDimensions"></span></b><br/>
-                <span class="smallTxt">(the STL file format is unitless, but typically assumed to be either in inches or mm)</span><br/>
+                <span class="smallTxt">( the STL file format is unitless, but typically assumed to be either in inches or mm )</span><br/>
                 <label class="bigLabel checkbox" for="doublesidedSTL">
                     <input id="doublesidedSTL" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
                     Double Sided
@@ -1069,7 +1074,7 @@
                 Filename: &nbsp;&nbsp;<input id="objFilename" value="" placeholder="" class="bigInput text form-control" type="text"> .stl<br/><br/>
                 Scale: &nbsp;&nbsp;<input value="" placeholder="" class="float exportScale form-control" type="text"><br/><br/>
                 Dimensions: &nbsp;&nbsp;<b><span class="exportDimensions"></span></b><br/>
-                <span class="smallTxt">(the OBJ file format is unitless, but typically assumed to be either in inches or mm)</span><br/>
+                <span class="smallTxt">( the OBJ file format is unitless, but typically assumed to be either in inches or mm )</span><br/>
                 <label class="bigLabel checkbox" for="doublesidedOBJ">
                     <input id="doublesidedOBJ" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
                     Double Sided
@@ -1389,6 +1394,30 @@
             Designed by <a href="https://en.wikipedia.org/wiki/Miura_fold" target="_blank">Koryo Miura</a>.
         </div>
     </div>
+</div>
+<div class="modal fade" id="screenCaptureModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+    <div class="modal-dialog modal-med">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+                <b>SCREEN RECORDING</b><br/><br/>
+                Filename: &nbsp;&nbsp;<input id="screenRecordFilename" value="" placeholder="" class="bigInput text form-control" type="text"> .webm<br/><br/>
+                Scale: &nbsp;&nbsp;<input id="capturerScale" value="" placeholder="" class="float form-control" type="text"><br/><br/>
+                Dimensions: &nbsp;&nbsp;<b><span id="canvasDimensions"></span></b><br/>
+                <span class="smallTxt">( resize browser window to change aspect ratio )</span><br/><br/>
+                Quality ( 0-63 ): &nbsp;&nbsp;<input id="capturerQuality" value="" placeholder="" class="float int form-control" type="text"><br/><br/>
+                FrameRate ( 1-60 fps ): &nbsp;&nbsp;<input id="capturerFPS" value="" placeholder="" class="float int form-control" type="text"><br/><br/>
+            </div>
+            <div class="modal-footer">
+                <button id="doScreenRecord" type="button" class="actionButton btn btn-success" data-dismiss="modal">Start</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="recordStatus">
+    <a href="#" id="stopRecord" class="btn btn-lg btn-danger">Stop Record <span></span></a>
 </div>
 </body>
 </html>
