--- a/index.html
+++ b/index.html
@@ -1409,11 +1409,14 @@
                 <span class="smallTxt">( resize browser window to change aspect ratio )</span><br/><br/>
                 <span class="video">
                     Quality ( 0-63 ): &nbsp;&nbsp;<input id="capturerQuality" value="" placeholder="" class="float int form-control" type="text"><br/><br/>
-                    FrameRate ( 1-60 fps ): &nbsp;&nbsp;<input id="capturerFPS" value="" placeholder="" class="float int form-control" type="text"><br/>
+                    FrameRate ( 1-60 fps ): &nbsp;&nbsp;<input id="capturerFPS" value="" placeholder="" class="float int form-control" type="text"><br/><br/>
                 </span>
                 <span class="gif">
-                    FrameRate ( 1-60 fps ): &nbsp;&nbsp;<input id="gifFPS" value="" placeholder="" class="float int form-control" type="text"><br/>
+                    FrameRate ( 1-60 fps ): &nbsp;&nbsp;<input id="gifFPS" value="" placeholder="" class="float int form-control" type="text"><br/><br/>
                 </span>
+                <span class="smallTxt">Notes: Do not resize window while recording.  You can increase the
+                amount of motion per frame by increasing the "Num simulation steps per render"
+                in <b>Animation Settings</b>.</span><br/>
             </div>
             <div class="modal-footer">
                 <button id="doGifRecord" type="button" class="gif actionButton btn btn-success" data-dismiss="modal">Start</button>
