--- a/index.html
+++ b/index.html
@@ -888,7 +888,9 @@
                 <p>
                 <b>ORIGAMI SIMULATOR</b><br/><br/>
 
-                    This app allows you to upload any origami crease pattern and simulate how it will fold.  It iteratively solves for small displacements in the geometry of an initially flat sheet due to forces
+                    This app allows you to simulate how any origami crease pattern will fold.  It may look a little different
+                    from what you typically think of as "origami" - rather than folding paper in a set of sequential steps,
+                    this simulation attempts to fold every crease simultaneously. It does this by iteratively solving for small displacements in the geometry of an initially flat sheet due to forces
                     exerted by creases.  This solver extends work from the following sources: <br/><br/>
                     &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www2.eng.cam.ac.uk/~sdg/preprint/5OSME.pdf">Origami Folding: A Structural Engineering Approach</a> by Mark Schenk and Simon D. Guest<br/>
                     &nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.tsg.ne.jp/TT/cg/TachiFreeformOrigami2010.pdf">Freeform Variations of Origami</a> by Tomohiro Tachi<br/>
@@ -964,7 +966,7 @@
                         <li>Outline edges have <b style="color:black">black</b> stroke - rgb(0, 0, 0), hex #000000 - use
                         this edge type for both the border of the pattern, and any internal holes.</li>
                         <li>Cuts have <b style="color:#00ff00">green</b> stroke - rgb(0, 255, 0), hex #00ff00- use this edge type
-                        to form thin slits.</li>
+                        to form thin slits in the pattern.</li>
                         <li>Hinges (undriven creases) have <b style="color:magenta">magenta</b> stroke - rgb(255, 0, 255), hex #ff00ff</li>
                     </ul>
                     <img src="assets/examplepattern.jpg"/>
