--- a/index.html
+++ b/index.html
@@ -1415,7 +1415,7 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
                 <b>SCREEN RECORDING</b><br/><br/>
-                <a href="#" id="setupAnimation" class="displayBlock btn btn-lg btn-default">Animate Fold Percent</a><br/><br/>
+                <a href="#" id="setupAnimation" class="displayBlock btn btn-lg btn-default">Configure Fold Percent Animation</a>&nbsp;&nbsp;<span class="smallTxt" id="foldPercentAnimationStatus"></span><br/><br/>
                 Filename: &nbsp;&nbsp;<input id="screenRecordFilename" value="" placeholder="" class="bigInput text form-control" type="text"> .webm<br/><br/>
                 Scale: &nbsp;&nbsp;<input id="capturerScale" value="" placeholder="" class="float form-control" type="text"><br/><br/>
                 Dimensions: &nbsp;&nbsp;<b><span id="canvasDimensions"></span></b><br/>
@@ -1451,8 +1451,8 @@
                     Current Fold Percent: &nbsp;&nbsp;<input value="" placeholder="" id="currentFoldPercent" class="float form-control" type="text">&nbsp;&nbsp;%<br/><br/>
                     <span id="animationSetupHelp"></span>
                     <ul id="animationHTML"></ul>
-                    <a href="#" id="addDelay" class="displayBlock btn btn-lg btn-warning">Add Delay</a>&nbsp;&nbsp;&nbsp;
-                    <a href="#" id="addAnimationItem" class="displayBlock btn btn-lg btn-success">Add Animation</a><br/>
+                    <div class="btns"><a href="#" id="addDelay" class="displayBlock btn btn-lg btn-warning">Add Delay</a>&nbsp;&nbsp;&nbsp;
+                    <a href="#" id="addAnimationItem" class="displayBlock btn btn-lg btn-success">Add Animation</a></div>
                 </p>
             </div>
             <div class="modal-footer">
