--- a/index.html
+++ b/index.html
@@ -613,6 +613,12 @@
                         </ul>
                     </li>
                     <li class="dropdown-submenu">
+                        <a tabindex="-1">Popups<span class="pull-right fui-arrow-right"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" class="demo" data-url="Popup/popupSimple.svg">Simple Square</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
                         <a tabindex="-1">Maze Foldings<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo author" data-author="squareMaze" data-url="Squaremaze/helloworld.svg">Square Maze "hello world"</a></li>
