--- a/index.html
+++ b/index.html
@@ -980,7 +980,8 @@
                     <ul>
                         <li>This tool will automatically triangulate regions in the pattern that form polygons with more than three sides.
                         To control the triangulations draw lines in <b style="color:#cccc00">yellow</b> - rgb(255, 255, 0), hex #ffff00<br/>
-                        In general, patterns are more stable when their triangulation is symmetric and minimizes long, skinny triangles.</li>
+                        In general, patterns are more stable when their triangulation is symmetric and minimizes long, skinny triangles.  Triangulation lines are not always necessary, look at
+                        the example files in the <b>Pattern</b> view to see how triangulation lines are used to help make a pattern more stable in simulation.</li>
                     </ul>
                     <img src="assets/patternwithtriangulations.jpg"/>
                     <ul>
@@ -997,7 +998,7 @@
                     </ul><br/>
 
                 <b>For Adobe Illustrator users:</b><br/><br/>
-                I use Illustrator to create SVGs (though any vector editing program should be fine), here are some tips I've found for making svgs to import into this tool.<br/><br/>
+                I use Illustrator to create SVGs (though any vector editing program should be fine).  Here are some tips I've found for making svgs to import into this tool.<br/><br/>
                     <ul>
                         <li>If you are starting with a pre-made vector file, first ungroup any groups (<b>Select all + Object > Ungroup All</b>) and release all clipping masks (<b>Select all + Object > Clipping Mask > Release</b>).</li>
                         <li>Create geometry using the <b>Line Segment Tool</b>.</li>
